css/index.css
:root {
    --hatcherblue: #6290C0;
    --hatcherred: #86335E;
    --hatcherdarkblue: #0067A5;
}


html {
    background-color: #f5f5f5;
    max-width: 100vw;
}


body {
    margin: 0;
    overflow-y: scroll;
    overflow-x: hidden;
    padding-bottom: 5em;
}


body.inactive {
    overflow-y: hidden;
}


header {
    display: flex;
    justify-content: space-between;
    align-content: center;

    border-style: double;
    border-color: var(--hatcherblue);
    border-width: 5px;

    /* padding: 1px 1px 1px 1px; */
    height: 74px;
    margin-bottom: 0.25em;
}

#page {
    display: flex;
    flex-direction: row;
    column-gap: 0;
    align-items: flex-start;
}


#page-title {
    font-size: xx-large;
    font-family: 'Times New Roman', Times, serif;
    color: var(--hatcherdarkblue);
    -webkit-text-stroke: 1px black;
    text-align: center;
    margin: auto;
}


.kirby-container {
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 0;
    padding: 0;
    max-width: 98px;
}


#kirby-container-left {
    align-self: left;
}


#kirby-container-right {
    align-self: right;
}


.kirby-img {
    width: 100%;
    height: 100%;
    object-fit: contain;
    max-width: auto;
    max-height: auto;
    margin: 0;
    padding: 0;
}

#btn-container {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

#nav-btn-container {
    margin-left: 0.15em;
    display: block;
    flex-direction: row;
    justify-content: flex-start;
    column-gap: 0.25em;
}

.nav-menu {
    position: relative;
    height: auto;
    width: 12vw;
    margin-left: -12vw;
    transition: margin-left 0.5s ease 0.2s;
    flex-shrink: 0;
    /* closing transition */
    /* opening transition */
    /* property name | duration | transition function | delay*/
}


.nav-menu.active {
    /* width: 275px; */
    margin-left: 0;
}


#nav-btn {
    display: flex;
    justify-content: space-around;
    flex-direction: column;
    cursor: pointer;
    padding: 10px;
    background-color: whitesmoke;
    border: none;
}


.bar {
    display: block;
    width: 30px;
    height: 3px;
    background-color: #333;
    /* color of the lines */
    margin: 4px 0;
    /* vertical spacing between lines */
}

#git-dm-btn-container {
    position: relative;
    float: inline-end;
}

#github-link {
    width: fit-content;
    height: fit-content;
}

#github-img {
    padding-right: 10px;
    height: 32px;
    width: 32px;
    display: block;
}

.mm-listview {
    display: flex;
    flex-direction: column;
    row-gap: 1em;
    list-style-type: none;

    @media (max-width: 600px) {
        #home-container .home-content {
            padding: 1.5rem;
        }

        #home-container h1 {
            font-size: 2rem;
        }

        #home-container p,
        #home-container li {
            font-size: 1rem;
        }
    }

    padding-left: 0.5em;
}


.mm-listview li {
    transition: all 0.2 ease-in-out;
    border-radius: 5px;
}


.mm-listview li:hover {
    color: #6290C000;
    box-shadow: 0 5px 5px lightgray;
}


.mm-link {
    display: flex;
    flex-direction: column;
    padding-left: 0.25em;
    text-decoration: none;
    color: var(--hatcherblue);
}


.mm-link-text {
    font-weight: bold;
}


#content {
    position: relative;
    padding: 5px 25px;
    overflow: auto;
    flex: 75%;

    /* center */
    max-width: min(50%, 1200px);
    margin: 0 auto;
    flex-grow: 0;
    flex-shrink: 0;
    justify-self: center;
}

.content-slideout {
    left: 0px;
    transition: left 0.5s ease 0.2s;
}


.content-slideout.active {
    left: 250px;
}

@media screen and (max-width: 600px) {
    html {
        overflow-x: hidden;
    }

    #page-title {
        font-size: medium;
    }

    #content {
        max-width: 90%;
    }
}

